--- a/tests/system_tests/config.yaml
+++ b/tests/system_tests/config.yaml
@@ -128,6 +128,7 @@ system:
       init_args:
         interval: epoch
         frequency: 1
+        monitor: val_total-loss
     train_metrics:
     - init_args:
         instance:
