--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,9 @@ extra:
       link: https://github.com/f-lair
       name: GitHub
 
+extra_css:
+  - stylesheets/extra.css
+
 markdown_extensions:
   - attr_list
   - def_list
@@ -67,6 +70,7 @@ markdown_extensions:
         - './examples/mnist/'
       dedent_subsections: True
   - pymdownx.superfences
+  - pymdownx.details
 
 plugins:
 - search
