--- a/tests/system_tests/config.yaml
+++ b/tests/system_tests/config.yaml
@@ -1,4 +1,4 @@
-# lightning.pytorch==2.0.2
+# lightning.pytorch==2.0.8
 seed_everything: true
 trainer:
   accelerator: auto
@@ -78,6 +78,11 @@ model_checkpoint_min_loss:
   every_n_epochs: null
   save_on_train_epoch_end: null
 compile_system: false
+log_name: null
+log_version: 'run__%d_%m_%Y__%H_%M_%S'
+num_folds: 1
+fold_index: 0
+fold_seed: 42
 ckpt_path: null
 data:
   class_path: tests.dummy.data.datamodules.DummyDatamodule
