--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "lightning-boost"
 version = "v1.0.2"
 description = "PyTorch Lightning extension for faster model development."
 authors = ["Fabrice von der Lehr <fabrice.vonderlehr222@gmail.com>"]
-license = "mit"
+license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/f-lair/lightning-boost"
 documentation = "https://lightning-boost.readthedocs.io/en/latest/"
@@ -11,10 +11,10 @@ packages = [{include = "lightning_boost"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-lightning = "^2.0.7"
-torchmetrics = "^1.0.3"
+lightning = "^2.0.8"
+torchmetrics = "^1.1.1"
 inflection = "^0.5.1"
-jsonargparse = {version = "^4.23.1", extras = ["signatures"]}
+jsonargparse = {version = "^4.24.1", extras = ["signatures"]}
 tensorboard = "^2.14.0"
 torch = {version = "^2.0.1", source = "torch"}
 torchvision = {version = "^0.15.2", source = "torch"}
