--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,21 @@ pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 scriv = {extras = ["toml"], version = "^1.3.1"}
 
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.2"
+mkdocs-autorefs = "^0.5.0"
+mkdocs-exclude-search = "^0.6.5"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.0"
+mkdocs-material = "^9.2.8"
+mkdocs-material-extensions = "^1.1.1"
+mkdocs-section-index = "^0.3.6"
+mkdocstrings = "^0.23.0"
+mkdocstrings-python = "^1.6.2"
+pygments = "^2.16.1"
+pymdown-extensions = "^10.3"
+
 [[tool.poetry.source]]
 name = "torch"
 url = "https://download.pytorch.org/whl/cpu"
